--- a/views/index.jade
+++ b/views/index.jade
@@ -25,5 +25,6 @@ block sidebar
       var h = d.getHours();
       var m = d.getMinutes();
       var time = h + ':' +m;
-      document.getElementById("demo").innerHTML = time;
+      var string = "The time right now is " + time
+      document.getElementById("demo").innerHTML = string;
       }
